--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "synacor-vm"
+name = "synacor_vm"
 description = "Virtual Machine Implementation for the Synacor Challenge"
 version = "0.3.0"
 authors = ["Jak Rowan <jak@rowan.li>"]
